Cleaned up hyprconfig, changed waybar and rofi.
Waybar is now mechabar https://github.com/sejjy/mechabar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,104 +5,57 @@
 # ██║  ██║   ██║   ██║     ██║  ██║╚██████╗╚██████╔╝██║ ╚████║██║     ██║╚██████╔╝
 # ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝ ╚═════╝ ╚═════╝ ╚═╝  ╚═══╝╚═╝     ╚═╝ ╚═════╝ 
 
-# Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
 
-
-
-# +==================================+
-# |░█▄░▄█░█▀█░█▀█░▀█▀░▀█▀░█▀█░█▀▄░█▀▀|
-# |░█░█░█░█░█░█░█░░█░░░█░░█░█░█▀▄░▀▀█|
-# |░▀░ ░▀░▀▀▀░▀░▀░▀▀▀░░▀░░▀▀▀░▀░▀░▀▀▀|
-# +==================================+
-
+# ───────────────────────────────────────────────────────────── monitors ───
 source = ~/.config/hypr/monitors.conf
 
-# +==============================================+
-# |░█░█░▀█▀░█▀█░█▀▄░█▀█░█░█░░░█▀▄░█░█░█░░░█▀▀░█▀▀|
-# |░█▄█░░█░░█░█░█░█░█░█░█▄█░░░█▀▄░█░█░█░░░█▀▀░▀▀█|
-# |░▀░▀░▀▀▀░▀░▀░▀▀░░▀▀▀░▀░▀░░░▀░▀░▀▀▀░▀▀▀░▀▀▀░▀▀▀|
-# +==============================================+
-
+# ───────────────────────────────────────────────────────── window rules ───
 source = ~/.config/hypr/windowrules.conf
-# source = ~/.config/hypr/windowrules_hypr.conf
 
-# +========================================+
-# |░█░█░█▀█░█▀▄░█░█░█▀▀░█▀█░█▀█░█▀▀░█▀▀░█▀▀|
-# |░█▄█░█░█░█▀▄░█▀▄░▀▀█░█▀▀░█▀█░█░░░█▀▀░▀▀█|
-# |░▀░▀░▀▀▀░▀░▀░▀░▀░▀▀▀░▀░░░▀░▀░▀▀▀░▀▀▀░▀▀▀|
-# +========================================+
-
+# ─────────────────────────────────────────────────────────── workspaces ───
 source = ~/.config/hypr/workspaces.conf
 
-# +==================================+
-# |░█▀█░█▀▄░█▀█░█▀▀░█▀▄░█▀█░█▄░▄█░█▀▀|
-# |░█▀▀░█▀▄░█░█░█░█░█▀▄░█▀█░█░█░█░▀▀█|
-# |░▀░░░▀░▀░▀▀▀░▀▀▀░▀░▀░▀░▀░▀░ ░▀░▀▀▀|
-# +==================================+
-
+# ──────────────────────────────────────────────────────────── variables ───
 $terminal = kitty
 $fileManager = yazi
 $browser = firefox
 $studentbrowser = firefox --profile /home/n4v/.mozilla/firefox/Student/
-# $wallpaper = /home/n4v/.config/backgrounds/astronaut.png
-# wallpaper = /home/n4v/.config/backgrounds/astronaut.png
+$wallpaper = /home/n4v/Pictures/Wallpapers/gruv_win11_white.jpg
 
-# +==========================================================+
-# |░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░█░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀░█▀▀|
-# |░█░█░█▀▀░█░█░█▀▀░█▀▄░█▀█░█░░░░░█░░░█░█░█░█░█▀▀░░█░░█░█░▀▀█|
-# |░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░▀░▀░▀░▀▀▀░░░▀▀▀░▀▀▀░▀░▀░▀░░░▀▀▀░▀▀▀░▀▀▀|
-# +==========================================================+
+# ────────────────────────────────── gaps, borders, and general settings ───
+general {
 
-general { 
-    gaps_in = 5
-    gaps_out = 9
+    gaps_in = 1
+    gaps_out = 1
 
-    # gaps_in = 4
-    # # gaps_out = 32
-    # gaps_out = 40
     border_size = 2
-    # border_size = 3
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(bdae93ee) rgba(282828aa) 120deg
     col.inactive_border = rgba(282828aa)
-    # col.active_border = rgba(eeeeeeee) rgba(282828aa) 120deg
-    # col.inactive_border = rgba(282828aa)
 
-    # col.active_border = rgba(282828ee) 
-    # col.inactive_border = rgba(282828aa)
-    
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = true 
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+    resize_on_border = true
     allow_tearing = false
-
     layout = dwindle
 }
 
+# ──────────────────────────────────────────────────────────── ecosystem ───
 ecosystem {
-    no_update_news = true
+    no_update_news = true       # disable news of new hyprland update
 }
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
+
+# ─────────────────────────────────────────────────── window decorations ───
 decoration {
-    rounding = 10
+    rounding = 0                # Corner rounding
+    active_opacity = 1.0        # Opacity of active windows
+    inactive_opacity = 1.0      # Opacity of inactive windows
 
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    shadow {
+        enabled = true
+        range = 8
+        render_power = 2
+        color = rgba(121212ee)
+    }
 
-shadow {
-    enabled = true
-    # shadow_range = 4
-    range = 24
-    render_power = 2
-    # col.shadow = rgba(1a1a1aee)
-    color = rgba(121212ee)
-}
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
+    blur {                      # For transparent windows
       enabled = true
       size = 0
       passes = 2
@@ -111,72 +64,61 @@ shadow {
       new_optimizations = true
       brightness = 0.90
     }
-
-
 }
 
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+# ────────────────────────────────────────────── dwindle tiling settings ───
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+    pseudotile = true
+    preserve_split = true
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+# ─────────────────────────────────────────────── master tiling settings ───
 master {
     new_status = master
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
+# ─────────────────────────────────────────────── miscellaneous settings ───
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = -1
+    disable_hyprland_logo = true # Disables default hyprland wallpapers
 }
 
+# ───────────────────────────────────────────────────── keybind settings ───
 binds {
     workspace_back_and_forth = 1
-    # allow_workspace_cycles = 1
+    hide_special_on_workspace_change = 1
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#input
+# ─────────────────────────────────────────────────── mouse and keyboard ───
 input {
-    kb_layout = us,es,se
-    kb_variant =
-    kb_model =
+    kb_layout = us,es,se                    # Keyboard Languages
     kb_options = grp:alt_space_toggle
-    kb_rules =
-
+    numlock_by_default = true
     follow_mouse = 1
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0
     accel_profile = flat
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
+# ──────────────────────────────────────────────────── touchpad gestures ───
 gestures {
     workspace_swipe = false
 }
 
+# ───────────────────────────────────────────── device-specific settings ───
 device {
     name = usb-gaming-mouse
     sensitivity = 0
 }
-# +==========================================+
-# |░█▀█░█▀█░▀█▀░█▄░▄█░█▀█░▀█▀░▀█▀░█▀█░█▀█░█▀▀|
-# |░█▀█░█░█░░█░░█░█░█░█▀█░░█░░░█░░█░█░█░█░▀▀█|
-# |░▀░▀░▀░▀░▀▀▀░▀░ ░▀░▀░▀░░▀░░▀▀▀░▀▀▀░▀░▀░▀▀▀|
-# +==========================================+
-# https://wiki.hyprland.org/Configuring/Variables/#animations
 
+# ──────────────────────────────────────────────────── window animations ───
 animations {
-    enabled = true
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+    enabled = false
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    # animation = NAME, ONOFF, SPEED, CURVE [,STYLE]
 
     animation = windows, 1, 5, myBezier
     animation = windowsOut, 1, 7, default, popin 85%
@@ -185,18 +127,11 @@ animations {
     animation = fade, 1, 1, default
     animation = workspaces, 1, 2, default
 }
-# +====================+
-# |░█▀▀░█░█░█▀▀░█▀▀░█▀▀|
-# |░█▀▀░▄▀▄░█▀▀░█░░░▀▀█|
-# |░▀▀▀░▀░▀░▀▀▀░▀▀▀░▀▀▀|
-# +====================+
 
-# exec = gsettings set org.gnome.desktop.interface gtk-theme ''
-# exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+# ─────────────────────────────────────────────── start-up exec commands ───
 exec = gsettings set org.gnome.desktop.interface cursor-theme "Capitaine Cursors (Gruvbox) - White"
 exec = sudo systemctl start bluetooth
 
-# exec-once = $terminal
 exec-once = hyprsunset
 exec-once = pypr
 exec-once = xhost si:localuser:root
@@ -204,32 +139,22 @@ exec-once = hypridle
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
 exec-once = waybar
-# exec-once = hyprpaper
 exec-once = swww-daemon
-exec-once = swww img /home/n4v/Pictures/Wallpapers/wallpapers/brown28.png --resize=no-crop
+exec-once = swww img $wallpaper
 exec-once = clipse -listen
 exec-once = clipse -wl-store
 exec-once = spotifyd
 exec-once = swaync
 exec-once = udsikie &
-exec-once=/usr/lib/polkit-kde-authentication-agent-1
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-
-# +==============================================+
-# |░█▀▀░█▀█░█░█░▀█▀░█▀▄░█▀█░█▀█░█▄░▄█░█▀▀░█▀█░▀█▀|
-# |░█▀▀░█░█░▀▄▀░░█░░█▀▄░█░█░█░█░█░█░█░█▀▀░█░█░░█░|
-# |░▀▀▀░▀░▀░░▀░░▀▀▀░▀░▀░▀▀▀░▀░▀░▀░ ░▀░▀▀▀░▀░▀░░▀░|
-# |░█░█░█▀█░█▀▄░▀█▀░█▀█░█▀▄░█░░░█▀▀░█▀▀░░░░░░░░░░|
-# |░▀▄▀░█▀█░█▀▄░░█░░█▀█░█▀▄░█░░░█▀▀░▀▀█░░░░░░░░░░|
-# |░░▀░░▀░▀░▀░▀░▀▀▀░▀░▀░▀▀░░▀▀▀░▀▀▀░▀▀▀░░░░░░░░░░|
-# +==============================================+
-
+# ─────────────────────────────────────────────── hyprland env variables ───
 env = XCURSOR_SIZE,32
 env = HYPRCURSOR_THEME,"Capitaine Cursors (Gruvbox) - White"
 env = HYPRCURSOR_SIZE,32
 env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_QPA_PLATFORMTHEME,kde
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_SCALE_FACTOR_ROUNDING_POLICY,round
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
@@ -237,25 +162,18 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 
-# █▄░█ █░█ █ █▀▄ █ ▄▀█
-# █░▀█ ▀▄▀ █ █▄▀ █ █▀█
-
-
+# ──────────────────────────────────────────── hyprland nvidia variables ───
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = __GL_VRR_ALLOWED,1
 env = WLR_NO_HARDWARE_CURSORS,1
 env = WLR_DRM_NO_ATOMIC,1
 
+# ────────────────────────────────────────────────────── cursor settings ───
 cursor {
     no_hardware_cursors = true
     inactive_timeout = 5
 }
 
-# +============================+
-# |░█▀▀░█▀█░█░█░█▀▄░█▀▀░█▀▀░█▀▀|
-# |░▀▀█░█░█░█░█░█▀▄░█░░░█▀▀░▀▀█|
-# |░▀▀▀░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀▀▀░▀▀▀|
-# +============================+
-
+# ────────────────────────────────────────────────────────── keybindings ───
 source = ~/.config/hypr/keybindings.conf
