--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -4,12 +4,14 @@
 # |░▀░▀░▀▀▀░░▀░░▀▀░░▀▀▀░▀░▀░▀▀░░▀▀▀░▀░▀░▀▀▀░▀▀▀|
 # +============================================+
 
+# ───────────────────────────────────────────────────────── modifier key ───
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# ─────────────────────────────────────────────────────── clamshell mode ───
 bindl = , switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, preffered, auto, auto"
 bindl = , switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
-# Top Row
+
+# ───────────────────────────────────────────────────────── top row keys ───
 binde = $mainMod SHIFT,  Q, killactive,
 bind = $mainMod,        Q, exec, pypr toggle music
 bind = $mainMod,        W, exec, pypr toggle term
@@ -21,20 +23,20 @@ bind = $mainMod,        I, togglesplit, # dwindle
 bind = $mainMod,        O, togglefloating,
 bind = $mainMod,        P, pseudo, # dwindle
 
-# Middle Row
+# ────────────────────────────────────────────────────── middle row keys ───
 bind = $mainMod,        D, exec, killall rofi || rofi -show combi
 bind = $mainMod,        S, exec, /home/n4v/.config/hypr/scripts/screenshot.sh rc
 bind = $mainMod SHIFT,  S, exec, /home/n4v/.config/hypr/scripts/screenshot.sh ri
 bind = $mainMod,        F, fullscreen, 1
 bind = $mainMod SHIFT,  F, fullscreen, 0
 
-# Bottom Row
+# ────────────────────────────────────────────────────── bottom row keys ───
 bind = $mainMod,        V, exec, kitty --class clipse -e 'clipse'
 bind = $mainMod,        B, exec, $browser
 bind = $mainMod SHIFT,  B, exec, $studentbrowser
 bind = $mainMod,        M, exec, kitty --class display_manager -e 'display-manager'
 
-# Special Chars
+# ──────────────────────────────────────────────── non-alphanumeric keys ───
 bind = $mainMod,        Tab, cyclenext,
 bind = $mainMod SHIFT,  Semicolon, exec, /home/n4v/.config/hypr/scripts/connect.sh
 bind = $mainMod,        Semicolon, exec, pypr show pulsemixer # NOTE: Must be `show` to avoid kitty process
@@ -42,21 +44,21 @@ bind = $mainMod,        Apostrophe, exec, pypr show bluetuith # taking up memory
 bind = $mainMod, Space, exec, pypr shift_monitors +1
 bind = $mainMod,        Slash, exec, pypr show proc
 
-binde = $mainMod,        Return, exec, $terminal
+binde = $mainMod,       Return, exec, $terminal
 bind = $mainMod,        Backspace, exit,
 
-# Move focus with mainMod + arrow keys
+# ────────────────────────────────────────────────────── hjkl focus keys ───
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
-# Move focused window
+# ──────────────────────────────────────────── hjkl window movement keys ───
 bind = $mainMod SHIFT, H, movewindow, l
 bind = $mainMod SHIFT, J, movewindow, d
 bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, L, movewindow, r
 
-# Switch workspaces with mainMod + [0-9]
+# ───────────────────────────────────────────── worskspace movement keys ───
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -68,7 +70,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+# ──────────────────────────────────────────── window to workspace keys ───
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -80,15 +82,15 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
+# ──────────────────────────────────────────────────── scratchpad keys ───
 bind = $mainMod, Grave, togglespecialworkspace, magic
 bind = $mainMod SHIFT, Grave, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
+# ──────────────────────────────────────── workspace mouse-scroll keys ───
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
+# ─────────────────────────────────────────────── window resizing keys ───
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 binde = $mainMod ALT, h, resizeactive, -25 0
@@ -96,25 +98,19 @@ binde = $mainMod ALT, l, resizeactive, 25 0
 binde = $mainMod ALT, k, resizeactive, 0 -25
 binde = $mainMod ALT, j, resizeactive, 0 25
 
-# Sound
+# ────────────────────────────────────────────── sound adjustment keys ───
 binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
 binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
 bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
 
-# Backlight
+# ───────────────────────────────────────────── monitor backlight keys ───
 binde =, XF86MonBrightnessDown, exec, brightnessctl set 10%-
 binde =, XF86MonBrightnessUp, exec, brightnessctl set +10%
 
-# Monitor Refresh Rate
-# bind = $mainMod ALT, 1, exec, sed -i 's/1920x1080@60/1920x1080@144/' "/home/n4v/.config/hypr/monitors.conf"
-# bind = $mainMod ALT, 2, exec, sed -i 's/1920x1080@144/1920x1080@60/' "/home/n4v/.config/hypr/monitors.conf"
 
 
-
-### TEST
-## Setup the key binding
-bind = $mainMod, X, exec, pypr expose
-bind = $mainMod ALT, Semicolon, exec, /home/n4v/.config/hypr/scripts/connect.sh
-
+# ────────────────────────────────────────────────── experimental keys ───
+bind = $mainMod, X, exec, pypr expose # For pypr expose
+bind = $mainMod ALT, Semicolon, exec, /home/n4v/.config/hypr/scripts/connect.sh # Keybind to connect to bt speaker
 # Add some style to the "exposed" workspace
 workspace = special:exposed,gapsout:60,gapsin:30,bordersize:5,border:true,shadow:false
