wlogout, zenmode, etc.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,6 +6,13 @@
 # ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝ ╚═════╝ ╚═════╝ ╚═╝  ╚═══╝╚═╝     ╚═╝ ╚═════╝ 
 
 
+# ──────────────────────────────────────────────────────────── variables ───
+$terminal = kitty
+$fileManager = yazi
+$browser = firefox
+$studentbrowser = firefox --profile /home/n4v/.mozilla/firefox/Student/
+$wallpaper = /home/n4v/Pictures/Wallpapers/gruv_win11_white.jpg
+
 # ───────────────────────────────────────────────────────────── monitors ───
 source = ~/.config/hypr/monitors.conf
 
@@ -15,12 +22,8 @@ source = ~/.config/hypr/windowrules.conf
 # ─────────────────────────────────────────────────────────── workspaces ───
 source = ~/.config/hypr/workspaces.conf
 
-# ──────────────────────────────────────────────────────────── variables ───
-$terminal = kitty
-$fileManager = yazi
-$browser = firefox
-$studentbrowser = firefox --profile /home/n4v/.mozilla/firefox/Student/
-$wallpaper = /home/n4v/Pictures/Wallpapers/gruv_win11_white.jpg
+# ──────────────────────────────────────────────────── window animations ───
+source = ~/.config/hypr/animations.conf
 
 # ────────────────────────────────── gaps, borders, and general settings ───
 general {
@@ -44,7 +47,7 @@ ecosystem {
 
 # ─────────────────────────────────────────────────── window decorations ───
 decoration {
-    rounding = 0                # Corner rounding
+    rounding = 2                # Corner rounding
     active_opacity = 1.0        # Opacity of active windows
     inactive_opacity = 1.0      # Opacity of inactive windows
 
@@ -114,19 +117,6 @@ device {
     sensitivity = 0
 }
 
-# ──────────────────────────────────────────────────── window animations ───
-animations {
-    enabled = false
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 5, myBezier
-    animation = windowsOut, 1, 7, default, popin 85%
-    animation = border, 1, 50, default
-    animation = borderangle, 1, 100, default
-    animation = fade, 1, 1, default
-    animation = workspaces, 1, 2, default
-}
 
 # ─────────────────────────────────────────────── start-up exec commands ───
 exec = gsettings set org.gnome.desktop.interface cursor-theme "Capitaine Cursors (Gruvbox) - White"
