--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -34,6 +34,7 @@ bind = $mainMod SHIFT,  F, fullscreen, 0
 bind = $mainMod,        V, exec, kitty --class clipse -e 'clipse'
 bind = $mainMod,        B, exec, $browser
 bind = $mainMod SHIFT,  B, exec, $studentbrowser
+bind = $mainMod,        N, exec, swaync-client -t -sw -R -rs
 bind = $mainMod,        M, exec, kitty --class display_manager -e 'display-manager'
 
 # ──────────────────────────────────────────────── non-alphanumeric keys ───
@@ -110,6 +111,7 @@ binde =, XF86MonBrightnessUp, exec, brightnessctl set +10%
 
 
 # ────────────────────────────────────────────────── experimental keys ───
+bind = , XF86PowerOff, exec, wlogout
 bind = $mainMod, X, exec, pypr expose # For pypr expose
 bind = $mainMod ALT, Semicolon, exec, /home/n4v/.config/hypr/scripts/connect.sh # Keybind to connect to bt speaker
 # Add some style to the "exposed" workspace
