--- a/.config/hypr/workspaces.conf
+++ b/.config/hypr/workspaces.conf
@@ -5,3 +5,5 @@
 # +========================================+
 
 workspace=10,monitor:eDP-1,default:true
+workspace = 1, on-created-empty:[] $terminal
+workspace = 2, on-created-empty:[] $browser
