consistency and cleanup

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -4,96 +4,68 @@
 # |░▀░▀░▀▀▀░▀░▀░▀▀░░▀▀▀░▀░▀░░░▀░▀░▀▀▀░▀▀▀░▀▀▀░▀▀▀|
 # +==============================================+
 
-# NOTE: General
-windowrulev2=noblur,class:^()$,title:^()$
-windowrulev2 = bordercolor rgb(fbf1c7), fullscreen:1 # Full screen indicator color      #fbf1c7
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+# ────────────────────────────────────────────────────────────── general ───
+windowrule =noblur,class:^()$,title:^()$
+windowrule = bordercolor rgb(fbf1c7), fullscreen:1 # Full screen indicator color      #fbf1c7
+windowrule = suppressevent maximize, class:.* # You'll probably like this.
 
 
-# NOTE: Clipboard Manager (Clipse)
-
-windowrulev2 = float,class:(clipse)
-windowrulev2 = dimaround,class:(clipse)
-windowrulev2 = size 900 500,class:(clipse)
-
-
-# NOTE: Bluetooth Manager (Bluetuith)
-
-windowrulev2 = float,class:(bluetuith)
-windowrulev2 = dimaround,class:(bluetuith)
-windowrulev2 = opacity 0.85, class:(bluetuith)
-windowrulev2 = size 900 900,class:(bluetuith)
-
-#
-# NOTE: Bluetooth Manager (Blueman)
-
-windowrulev2 = float,class:(blueman)
-windowrulev2 = dimaround,class:(blueman)
-windowrulev2 = opacity 0.85, class:(blueman)
-windowrulev2 = size 900 900,class:(blueman)
-
-# NOTE: Audio Mixer (Pulsemixer)
-
-windowrulev2 = float,class:(pulsemixer)
-windowrulev2 = size 900 500,class:(pulsemixer)
-windowrulev2 = dimaround,class:(pulsemixer)
-windowrulev2 = opacity 0.95, class:(pulsemixer)
+# ─────────────────────────────────────────────────── clipboarad manager ───
+windowrule = float,class:(clipse)
+windowrule = dimaround,class:(clipse)
+windowrule = size 900 500,class:(clipse)
 
 
-# NOTE: Terminal Emulator (Kitty)
+# ──────────────────────────────────────────────────────────── bluetuith ───
+windowrule = float,class:(bluetuith)
+windowrule = dimaround,class:(bluetuith)
+windowrule = opacity 0.85, class:(bluetuith)
+windowrule = size 900 900,class:(bluetuith)
 
-# windowrulev2 = opacity 0.80 0.75,class:^(kitty)$
-
-
-# NOTE: Non-Nvim Text Editor (VSCode)
-
-# windowrulev2 = opacity 0.90 0.80,class:^(Code)
-
-
-# NOTE: Monitor Config (Custom Scripts)
-windowrulev2 = float,title:(MonitorModes)
-windowrulev2 = size 400 550,title:(MonitorModes)
-windowrulev2 = opacity 0.80 0.80,title:(MonitorModes)
-windowrulev2 = float,class:(display_manager)
-windowrulev2 = size 550 400,title:(display_manager)
-windowrulev2 = opacity 0.80 0.80,title:(display_manager)
+# ─────────────────────────────────────────────────────────── pulsemixer ───
+windowrule = float,class:(pulsemixer)
+windowrule = size 900 500,class:(pulsemixer)
+windowrule = dimaround,class:(pulsemixer)
+windowrule = opacity 0.95, class:(pulsemixer)
 
 
+# ───────────────────────────────────────────────────── terminal - kitty ───
 
-# NOTE: File Viewer (Zathura)
-
-windowrulev2 = opacity 0.80 0.80,class:(zathura)
-
-
-# NOTE: File Explorer (Thunar)
-
-windowrulev2 = opacity 0.90 0.90,class:(Thunar)
+# windowrule = opacity 0.95 0.95,class:^(kitty)$
 
 
-# NOTE: Music Player (Spotify)
+# ────────────────────────────────────────────────────── editor - vscode ───
 
-# windowrulev2 = opacity 0.80 0.80,title:^(Spotify Premium)$
-windowrulev2 = opacity 0.85 0.85,class:^(Spotify)$
+# windowrule = opacity 0.90 0.80,class:^(Code)
 
-# NOTE: Xwayland Video Bridge
-windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
-windowrulev2 = noanim, class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
-windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 
-# NOTE: VESKTOP
+# ─────────────────────────────────────────────────────── monitormanager ───
+windowrule = float,title:(MonitorModes)
+windowrule = size 400 550,title:(MonitorModes)
+windowrule = opacity 0.80 0.80,title:(MonitorModes)
+windowrule = float,class:(display_manager)
+windowrule = size 550 400,title:(display_manager)
+windowrule = opacity 0.80 0.80,title:(display_manager)
+
+# ───────────────────────────────────────────────────────── file viewer ───
+windowrule = opacity 0.80 0.80,class:(zathura)
+
+
+# ─────────────────────────────────────────────────────── file explorer ───
+windowrule = opacity 0.90 0.90,class:(Thunar)
+
+# ───────────────────────────────────────────────────────────── spotify ───
+windowrule = opacity 0.95 0.95,class:^(Spotify)$
+
+# ─────────────────────────────────────────────── xwayland video bridge ───
+windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrule = noanim, class:^(xwaylandvideobridge)$
+windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrule = noblur, class:^(xwaylandvideobridge)$
+
+# ───────────────────────────────────────────────────────────── vesktop ───
 windowrule = opacity 0.0 override,title:^(vesktop)$
 
-### Experimental Applications 
-# windowrulev2 = opacity 0.85 0.85,class:^(simple)$
-windowrulev2 = float,title:^(radio buttons)$
-windowrulev2 = size 300 200,title:^(radio buttons)$
-# windowrulev2 = opacity 0.80 0.80,title:^(radio buttons)$
-# SpanishDict
-windowrulev2 = float, title:(.*SpanishDictionary\.com.*)
-windowrulev2 = float, class:^(firefox)$, title:.*SpanishDictionary\.com.*
-# windowrulev2 = size 900 500, class:(firefox), title:.*SpanishDictionary\.com.*
-#
-#
-windowrulev2 = float,title:^(.*bab\.la.*)$
+# ──────────────────────────────────────────────────────── experimental ───
+
