removed nvim neorg

--- a/.config/hypr/animations.conf
+++ b/.config/hypr/animations.conf
@@ -10,3 +10,12 @@ animations {
     animation = fade, 1, 1, default
     animation = workspaces, 1, 2, default
 }
+# animations {
+#     enabled = true
+#
+#     bezier = myBezier, 0.16, 1, 0.3, 1
+#
+#     animation = windows, 1, 5, myBezier, popin 80%
+#     animation = fade, 1, 7, myBezier
+#     animation = workspaces, 1, 6, myBezier, slidefade 80%
+# }
